--- a/custom_components/macs/manifest.json
+++ b/custom_components/macs/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "macs",
-  "name": "M.A.C.S. Mood-Aware Contextual SVG",
+  "name": "Macs",
   "version": "0.3.0",
   "documentation": "https://github.com/glyndavidson/MACS",
   "issue_tracker": "https://github.com/glyndavidson/MACS/issues",
