Fix weather service helper

--- a/custom_components/macs/services.yaml
+++ b/custom_components/macs/services.yaml
@@ -8,6 +8,7 @@ set_mood:
       required: true
       selector:
         select:
+          mode: dropdown
           options:
             - bored
             - confused
@@ -17,3 +18,21 @@ set_mood:
             - sleeping
             - surprised
             - thinking
+
+set_weather:
+  name: Set weather
+  description: Set Macs weather (updates select.macs_weather).
+  fields:
+    weather:
+      name: Weather
+      description: One of none, rain, wind, hot, cold
+      required: true
+      selector:
+        select:
+          mode: dropdown
+          options:
+            - none
+            - rain
+            - wind
+            - hot
+            - cold
