--- a/custom_components/macs/services.yaml
+++ b/custom_components/macs/services.yaml
@@ -52,3 +52,50 @@ set_brightness:
           step: 1
           mode: slider
           unit_of_measurement: "%"
+set_temperature:
+  name: Set temperature intensity
+  description: Set MACS temperature intensity (0-100).
+  fields:
+    temperature:
+      name: Temperature
+      description: 0 (none) to 100 (max)
+      required: true
+      selector:
+        number:
+          min: 0
+          max: 100
+          step: 1
+          mode: slider
+          unit_of_measurement: "%"
+
+set_windspeed:
+  name: Set wind speed intensity
+  description: Set MACS wind speed intensity (0-100).
+  fields:
+    windspeed:
+      name: Wind speed
+      description: 0 (none) to 100 (max)
+      required: true
+      selector:
+        number:
+          min: 0
+          max: 100
+          step: 1
+          mode: slider
+          unit_of_measurement: "%"
+
+set_rainfall:
+  name: Set rainfall intensity
+  description: Set MACS rainfall intensity (0-100).
+  fields:
+    rainfall:
+      name: Rainfall
+      description: 0 (none) to 100 (max)
+      required: true
+      selector:
+        number:
+          min: 0
+          max: 100
+          step: 1
+          mode: slider
+          unit_of_measurement: "%"
