--- a/custom_components/macs/services.yaml
+++ b/custom_components/macs/services.yaml
@@ -83,18 +83,13 @@ set_rainfall:
           mode: slider
           unit_of_measurement: "%"
 
-set_snowfall:
-  name: Set snowfall intensity
-  description: Set MACS snowfall intensity (0-100).
+set_snowing:
+  name: Set snowing
+  description: Toggle MACS snow effect on/off.
   fields:
-    rainfall:
-      name: Snowfall
-      description: 0 (none) to 100 (max)
+    snowing:
+      name: Snowing
+      description: true to enable snow effect, false to disable
       required: true
       selector:
-        number:
-          min: 0
-          max: 100
-          step: 1
-          mode: slider
-          unit_of_measurement: "%"
+        boolean:
