Prepared backend for new Charging Mood

--- a/custom_components/macs/services.yaml
+++ b/custom_components/macs/services.yaml
@@ -11,6 +11,7 @@
           mode: dropdown
           options:
             - bored
+            - charging
             - confused
             - happy
             - idle
